--- a/package.json
+++ b/package.json
@@ -17,18 +17,23 @@
   "icon": "public/logo.png",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/Xiabaiyou/wot-ui-intellisense.git"
   },
   "contributes": {
     "commands": [
       {
-        "command": "wot-ui-intellisense.helloWorld",
-        "title": "Hello World"
+        "command": "wot-ui-intellisense.toggleIntellisense",
+        "title": "Toggle Wot UI IntelliSense"
+      },
+      {
+        "command": "wot-ui-intellisense.refreshComponents",
+        "title": "Refresh Wot UI Components"
       }
     ]
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
+    "build": "vsce package",
     "compile": "webpack",
     "watch": "webpack --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
