feat: 实现 Wot UI 组件库的智能提示支持
- 支持 80+ 个 Wot UI 组件的代码补全功能
- 提供组件标签、属性、事件的智能补全
- 实现短横线式(kebab-case)组件提示
- 添加悬停文档提示功能，显示组件和属性的详细说明
- 支持 Vue 和 HTML 文件中的智能提示

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "wot-ui-intellisense",
   "publisher": "baiyou",
   "description": "",
-  "version": "0.0.4",
+  "version": "0.0.1",
   "engines": {
     "vscode": "^1.99.0"
   },
@@ -29,7 +29,21 @@
         "command": "wot-ui-intellisense.refreshComponents",
         "title": "Refresh Wot UI Components"
       }
-    ]
+    ],
+    "languages": [
+      {
+        "id": "vue",
+        "extensions": [".vue"],
+        "aliases": ["Vue", "vue"]
+      },
+      {
+        "id": "html",
+        "extensions": [".html"],
+        "aliases": ["HTML", "html"]
+      }
+    ],
+    "grammars": [],
+    "configuration": {}
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
